tests/tests/expected/milling/siemens-840c/error_messages/siemens-840c_Probe Geometry No Corner_IN.output
Error: Failed while processing onCycle() for record 1776.
Error: Out of Position and Wrong size action not supported
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Failed to execute configuration.
Error: Failed to post process. See below for details.
